stateDiagram-v2
  [*] --> READY
  ERROR --> READY: KEEP_ALIVE
  READY --> ERROR: timeout
  READY --> RUNNING: START_REC, lettura
  RUNNING --> READY: END_REC
  RUNNING --> ALERT_RUNNING: dangerLevel >= ALERT_TRESHOLD
  ALERT_RUNNING --> RUNNING: HANDLE_ALERT
  ALERT_RUNNING --> ALERT_READY: END_REC
  ALERT_READY --> READY: HANDLE_ALERT
  ALERT_READY --> ALERT_RUNNING: lettura
